[gd_scene load_steps=6 format=2]

[ext_resource path="res://ExplosiveBarrel.png" type="Texture" id=1]
[ext_resource path="res://Barrel.gd" type="Script" id=2]
[ext_resource path="res://SFX_-_explosion_10.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 21.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.5, 27.5 )

[node name="Barrel" type="KinematicBody2D" groups=["dangerous"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="." groups=["dangerous"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
